--- a/package.json
+++ b/package.json
@@ -5,36 +5,20 @@
   "author": "mrbrid <https://mrbrid.cc>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "build:prod": "cross-env NODE_ENV=production node build/build.js",
-    "build:test": "cross-env NODE_ENV=testing node build/build.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
-    "fix-memory-limit": "cross-env LIMIT=8096 increase-memory-limit"
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "ant-design-vue": "1.5.2",
-    "atomic-bohr-model": "^1.0.91",
+    "ant-design-vue": "^1.3.2",
+    "apexcharts": "^2.6.0",
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "browserslist": "^3.2.8",
-    "chart.js": "^2.7.2",
-    "crypto-js": "^3.1.9-1",
     "date-fns": "^1.29.0",
-    "echarts": "^4.5.0",
-    "elements": "^0.6.0",
     "enquire.js": "^2.1.6",
-    "gsap": "^2.1.1",
-    "material-design-icons-iconfont": "^3.0.3",
-    "node-sass": "^4.9.2",
-    "periodic-table": "0.0.8",
-    "sass-loader": "^7.0.3",
-    "vue": "2.6.10",
-    "vue-fraction-grid": "^1.1.0",
-    "vue-meta": "^2.3.3",
+    "vue": "^2.5.17",
+    "vue-apexcharts": "^1.2.7",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
-    "vuetify": "^2.5.8",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -56,7 +40,6 @@
     "chromedriver": "^2.27.2",
     "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.2.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
@@ -72,7 +55,6 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "increase-memory-limit": "^1.0.7",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.7.1",
@@ -89,14 +71,12 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "2.6.10",
+    "vue-template-compiler": "2.5.17",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
